@startuml
!theme mono

class EmailClassifierFacade {
    - base_embedding: BaseEmbedding
}

class EmbeddingsFactory{
    + create_embeddings(embedding_type: str, df: pd.DataFrame): Embedding
}

class SentenceTransformerEmbeddings {
    
}

class TfidfEmbeddings {
    
    
}

class TfidfSentenceEmbeddings {

}

interface BaseEmbedding {
    + create_training_embeddings(df: DataFrame): np.ndarray
    + create_classification_embeddings(df: DataFrame): np.ndarray
}

EmailClassifierFacade o-- BaseEmbedding
EmailClassifierFacade --> EmbeddingsFactory: uses
EmbeddingsFactory ..> BaseEmbedding : creates
BaseEmbedding <|-- SentenceTransformerEmbeddings
BaseEmbedding <|-- TfidfEmbeddings
BaseEmbedding <|-- Word2VecEmbeddings
BaseEmbedding <|-- TfidfSentenceEmbeddings
@enduml
